traces/bug_602.txt
src/femlib/GenericMesh.hpp:809: error: DEAD_STORE
  The value written to &intern (type int) is never used.
Showing all 1 steps of the trace


src/femlib/GenericMesh.hpp:809:25: Write of unused value
807.                       {
808.                           nbei ++;
809.                           intern=1;
                               ^
810.                           // choise le bon .. too get the correct normal
811.                           int k= nk/nea, e=nk%nea;
